--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,19 +23,23 @@ jobs:
     - name: Build
       run: npm run build
 
-    - name: Deploy
+    - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
-      env:
+      with:
+        args: --acl public-read --follow-symlinks --delete
+        AWS_S3_BUCKET: ${{ secrets.S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run:
-        aws s3 sync --delete --region ${{ secrets.AWS_REGION }} ./build/ s3://${{ secrets.S3_BUCKET }}/
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        SOURCE_DIR: 'build'
 
-    - name: Clear cache in CloudFront
+
+    - name: Invalidate CloudFront Cache
       uses: chetan/invalidate-cloudfront-action@v1.3
       env:
+        DISTRIBUTION: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+        PATHS: '/*'
+        AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        PATHS: "/*"
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        DISTRIBUTION: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+
